@@ -1,3 +1,7 @@
+2009-02-16  Jeremie Dimino <jeremie@dimino.org>
+
+	* build/optcomp/optcomp.ml: better handling of errors
+
 2009-02-15  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
 
 	* tests/dynlink/*: created
